--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -312,7 +312,7 @@
             <div class="container">
                 <div class="rows">
                     <article>
-                        <h3 class="h3 mb-middle mt-middle">
+                        <h3 class="h3 mb-middle">
                             What are the technical requirements? What type of computer does my child need to take class?
                         </h3>
                         <ol>
@@ -333,6 +333,119 @@
                                 </p>
                             </li>
                         </ol>
+                        {# <div>
+                            <div id="techTable">
+                                <table class="table table-responsive">
+                                    <thead>
+                                        <tr>
+                                            <th></th>
+                                            <th>PC</th>
+                                            <th>Mac</th>
+                                            <th>Chromebook</th>
+                                            <th>iPad/Tablet</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr width="100%">
+                                            <td> <strong>Scratch Jr</strong> </td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        </tr>
+                                        <tr>
+                                            <td> <strong>Kodu</strong> </td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="no"><i class="fa fa-times-circle"></i></td>
+                                            <td class="no"><i class="fa fa-times-circle"></i></td>
+                                            <td class="no"><i class="fa fa-times-circle"></i></td>
+                                        </tr>
+                                        <tr>
+                                            <td> <strong>Scratch</strong> </td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        </tr>
+                                    <tr>
+                                        <td> <strong>Roblox Code</strong> </td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
+                                    </tr>
+                                    <tr>
+                                        <td><strong>Minecraft Club</strong> </td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                    </tr>
+                                    <tr>
+                                        <td><strong> Minecraft Mods</strong></td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
+                                    </tr>
+                                    <td> <strong>Web Development</strong> </td>
+                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                    <td class="no"><i class="fa fa-times-circle"></i></td>
+                                </tr>
+                                <tr>
+                                    <td> <strong>Python</strong> </td>
+                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                    <td class="no"><i class="fa fa-times-circle"></i></td>
+                                </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div> #}
+                    </article>
+                    <aside>
+                        <div class="sideBanner">
+                            <div class="sideBanner__down">
+                                <h5 class="h5">
+                                    <strong>
+                                        Other questions: 
+                                    </strong>
+                                </h5>
+                                <ul>
+                                    <li>
+                                        <a href="#">How are your classes taught?</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Do you have LIVE instruction?</a>
+                                        
+                                    </li>
+                                    <li>
+                                        <a href="#">What are the technical requirements? <br>
+                                            What type of computer does my child need to take class?</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Can my child use an iPad/Tablet or Chromebook for class?</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">How do I use the portal?</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Do you offer sibling discounts?</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </aside>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="rows">
+                    <article>
                         <div>
                             <div id="techTable">
                                 <table class="table table-responsive">
@@ -406,39 +519,6 @@
                             </div>
                         </div>
                     </article>
-                    <aside>
-                        <div class="sideBanner">
-                            <div class="sideBanner__down">
-                                <h5 class="h5">
-                                    <strong>
-                                        Other questions: 
-                                    </strong>
-                                </h5>
-                                <ul>
-                                    <li>
-                                        <a href="#">How are your classes taught?</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Do you have LIVE instruction?</a>
-                                        
-                                    </li>
-                                    <li>
-                                        <a href="#">What are the technical requirements? <br>
-                                            What type of computer does my child need to take class?</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Can my child use an iPad/Tablet or Chromebook for class?</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">How do I use the portal?</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Do you offer sibling discounts?</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </aside>
                 </div>
             </div>
         </section>
