--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1066,9 +1066,6 @@ aside {
   margin-bottom: 15px;
 }
 
-.sideBanner .sideBanner__down a{
-  color: white;
-}
 .sideBanner  h2,
 .sideBanner  h3,
 .sideBanner  h4,
@@ -1092,6 +1089,10 @@ aside {
   vertical-align: middle;
   line-height: 27px;
   color: #fff;
+}
+
+.sideBanner li a{
+  color: white;
 }
 
 
