--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1093,6 +1093,11 @@ aside {
 
 .sideBanner li a{
   color: white;
+  text-decoration: none;
+}
+
+.sideBanner li a:hover{
+  text-decoration: underline;
 }
 
 
