--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -371,7 +371,7 @@
             </div>
         </section>
         <section>
-            <div class="container">
+            <div class="container" style="margin-top: -30px;">
                 <div class="rows">
                     <article>
                         <div>
