--- a/css/tableFilter.scss
+++ b/css/tableFilter.scss
@@ -201,7 +201,7 @@
         font-weight: unset;
         border-bottom: none!important;
         @media only screen and (max-width: 768px) and (min-width: 0px) {
-            font-size: 14px;
+            font-size: 12px;
           }
     }
     
@@ -235,6 +235,7 @@
     .yes{
         color: #34a853!important;
         font-size: 1.8em;
+        text-align: center!important;
         @media only screen and (max-width: 768px) and (min-width: 0px) {
             font-size: 1.3em;
           }
@@ -242,6 +243,7 @@
     .no{
         color:#ea4335!important;
         font-size: 1.8em;
+        text-align: center!important;
         @media only screen and (max-width: 768px) and (min-width: 0px) {
             font-size: 1.3em;
           }
