online  page fix

--- a/css/tableFilter.css
+++ b/css/tableFilter.css
@@ -149,21 +149,17 @@
   table-layout: fixed;
 }
 
+@media only screen and (max-width: 768px) and (min-width: 0px) {
+  #techTable .table {
+    table-layout: auto;
+  }
+}
+
 #techTable thead tr th:first-child,
 #techTable tbody tr td:first-child {
   width: 40%;
   min-width: 40%;
   max-width: 40%;
-  word-break: break-all;
-}
-
-@media only screen and (max-width: 768px) and (min-width: 0px) {
-  #techTable thead tr th:first-child,
-  #techTable tbody tr td:first-child {
-    width: 20%;
-    min-width: 20%;
-    max-width: 20%;
-  }
 }
 
 #techTable table, #techTable th, #techTable td {
@@ -209,6 +205,7 @@
   line-height: 1.2;
   font-weight: unset;
   border-bottom: none !important;
+  text-align: center;
 }
 
 @media only screen and (max-width: 768px) and (min-width: 0px) {
