--- a/css/tableFilter.scss
+++ b/css/tableFilter.scss
@@ -135,10 +135,11 @@
         margin-bottom: 0!important;
         width: 100%;
         table-layout: fixed;
-        // @media only screen and (max-width: 768px) and (min-width: 0px) {
-        //     overflow: scroll!important;
-        //     width: 900px;
-        //   }
+        @media only screen and (max-width: 768px) and (min-width: 0px) {
+            // overflow: scroll!important;
+            // width: 900px;
+            table-layout: auto;
+          }
     }
 
     thead tr th:first-child,
@@ -146,12 +147,6 @@
         width: 40%;
         min-width: 40%;
         max-width: 40%;
-        word-break: break-all;
-        @media only screen and (max-width: 768px) and (min-width: 0px) {
-            width: 20%;
-            min-width: 20%;
-            max-width: 20%;
-          }
     }
 
     table, th, td {
@@ -200,6 +195,7 @@
         line-height: 1.2;
         font-weight: unset;
         border-bottom: none!important;
+        text-align: center;
         @media only screen and (max-width: 768px) and (min-width: 0px) {
             font-size: 12px;
           }
