--- a/templates/page/FAQ.html
+++ b/templates/page/FAQ.html
@@ -288,8 +288,7 @@
 
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
-        <section  class="sectionheader" style="
-        background-image:url(/CA/uploads/faq-header.jpg); background-position: center,0 33%; background-size: auto, cover;padding-top:60px;padding-bottom:60px;">
+        <section  class="sectionheader">
             <div class="container">
                 <div class="rows">
                     <article>
