--- a/css/style7.css
+++ b/css/style7.css
@@ -4699,6 +4699,7 @@ aside {
 .questionLink {
   position: relative;
   padding-left: 20px;
+  margin-bottom: 10px;
 }
 
 .questionLink a {
@@ -4774,6 +4775,18 @@ aside {
 }
 
 .myFriendsPage .h1 {
+  margin-top: 170px;
+}
+
+.faqPage {
+  background-position: 50% 35%;
+  background-size: cover;
+  padding: 100px 0;
+  background-image: url("/CA/uploads/faq-header.jpg");
+  height: 400px !important;
+}
+
+.faqPage .h1 {
   margin-top: 170px;
 }
 
