--- a/templates/page/FAQ.html
+++ b/templates/page/FAQ.html
@@ -288,7 +288,7 @@
 
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
-        <section  class="sectionheader">
+        <section  class="sectionheader faqPage">
             <div class="container">
                 <div class="rows">
                     <article>
