--- a/templates/page/newtrial.html
+++ b/templates/page/newtrial.html
@@ -346,7 +346,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <img src="/CA/girl03_600x423.jpg" alt="girl">
+                            <img src="/CA/uploads/girl03_600x423.jpg" alt="girl">
                         </div>
                         <strong>
                             <p>
