--- a/templates/page/newtrial.html
+++ b/templates/page/newtrial.html
@@ -288,12 +288,14 @@
 </div>
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
-        <section id="onlinePageHeader" class="sectionheader myFriendsPage">
+        <section id="onlinePageHeader" class="sectionheader">
+            <video class="video" loop="loop" autoplay="" muted="">
+                <source src="/CA/uploads/BannerVideo.m4v" type="video/mp4" />
+            </video>
             <div class="container">
                 <div class="rows">
                     <article>
-                        <h1 class="h1">"This is so cool!"
-                        </h1>
+                        <h1 class="h1">"This is so cool!"</h1>
                     </article>
                 </div>
             </div>
