--- a/css/style7.css
+++ b/css/style7.css
@@ -4803,4 +4803,9 @@ aside {
     margin-bottom: 85px;
   }
 }
+
+.student-dob {
+  display: inline-block;
+  width: auto;
+}
 /*# sourceMappingURL=style7.css.map */
