--- a/templates/page/newtrial.html
+++ b/templates/page/newtrial.html
@@ -355,10 +355,6 @@
                                 Please enter your information, below. Once you submit the form, you will be taken to a screen where you can register for a specific Free Trial Class on a day/time that is convenient for you.
                             </p>
                         </strong>
-                    </article>
-                </div>
-                <div class="rows">
-                    <article>
                         <form class="pb-contact-form" id="newOrderForm">
 
                             <div class="block">
@@ -464,7 +460,7 @@
                                 <input class="btn btn-primary" type="submit" id="submitRegistration" value="See Trial Schedule"/>
                             </div>
     
-                        </form>
+                        </form>s
                     </article>
                 </div>
             </div>
