--- a/templates/page/newtrial.html
+++ b/templates/page/newtrial.html
@@ -460,7 +460,7 @@
                                 <input class="btn btn-primary" type="submit" id="submitRegistration" value="See Trial Schedule"/>
                             </div>
     
-                        </form>s
+                        </form>
                     </article>
                 </div>
             </div>
