--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1305,7 +1305,7 @@ aside {
   .textWithImgBlock > img {
     display: block;
     max-width: 240px;
-    margin: 0 auto 15px;
+    margin: 10px auto 15px;
   }
 }
 
@@ -1734,8 +1734,6 @@ aside {
     margin-top: 170px;
   }
 }
-
-
 
 #onlinePage{
   .rows{
