--- a/templates/page/newtrial.html
+++ b/templates/page/newtrial.html
@@ -553,8 +553,8 @@
                 <div class="textwidget">
                     <div class="textwidget">
                         <div style="color: white; line-height: 1.5em;">
-                            <a style="font-size: 80%;" href="/private-classes">Private Classes</a>
-                            <a style="font-size: 80%;" href="/school-programs">After School</a>
+                            <a style="font-size: 80%;" href="/private-classes">Private Classes</a><br />
+                            <a style="font-size: 80%;" href="/school-programs">After School</a><br />
                             <a style="font-size: 80%;" href="/about/faq">FAQ</a><br />
                             <a style="font-size: 80%;" href="/about/why-coding">Why Coding?</a><br />
                             <a style="font-size: 80%;" href="/about/press">Press</a><br />
