--- a/css/style7.css
+++ b/css/style7.css
@@ -4332,7 +4332,7 @@ aside {
   .textWithImgBlock > img {
     display: block;
     max-width: 240px;
-    margin: 0 auto 15px;
+    margin: 10px auto 15px;
   }
 }
 
