--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -303,7 +303,7 @@
         <section>
             <div class="headerUnderline">
                 <p>
-                    10,000+ KIDS HAVE LEARNED TO CODE WITH US  |  40+ ROCKSTAR INSTRUCTORS  |  100% LIVE  SMALL GROUP CLASSES  |   35 COURSES  FOR AGES 6 - 13!
+                    10,000+ KIDS HAVE LEARNED TO CODE WITH US  |  40+ ROCKSTAR INSTRUCTORS  |  100% LIVE  INSTRUCTION  |   35 COURSES  FOR AGES 6 - 13!
                 </p>
             </div>
         </section>
@@ -318,12 +318,15 @@
                         <p>
                             <strong>Note: </strong>
                             Since these robotics classes require a Lego WEDO 2.0 kit, we can ONLY schedule these classes 
-                            as <a href="#">My Friends Online</a>  or <a href="#">1:1 tutoring sessions</a>.
+                            as <a href="#">My Friends Online</a>  or <a href="#">Private Coding</a>.
                         </p>
                         <p> <strong> Required for class: Computer (desktop or laptop) and you MUST
                              use a 
                              <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
-                            </strong></p>
+                            </strong>
+                            <br>
+                            Price of LEGO® Education WeDo 2.0 Core Set — $214.95
+                        </p>
                         <p>We’ve seen them in movies, read about them in books, incorporated them in industry, and now even find them as toys. Robots are quickly becoming a huge part of everyday life and we now need to learn how to work with and create these machines.</p>
                         <p>These junior robotics courses will teach children valuable concepts in engineering and physics,
                              allow them to experiment with their ideas, expose them to the process of designing a product 
